first version done

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,8 +66,8 @@
 		margin: 20px;
 		display: inline-block;
 	}
-	/* journal */
-	#journal .journal-block .journal-info {
+	/* featured */
+	#featured .featured-block .featured-info {
 		margin-bottom: 30px;
 	}
 	/* Contact */
@@ -141,8 +141,8 @@
 		margin: 20px;
 		display: inline-block;
 	}
-	/* journal */
-	#journal .journal-block .journal-info {
+	/* featured */
+	#featured .featured-block .featured-info {
 		margin-bottom: 30px;
 	}
 	/* Contact */
@@ -212,8 +212,8 @@
 		margin: 10px;
 		display: inline-block;
 	}
-	/* journal */
-	#journal .journal-block .journal-info {
+	/* featured */
+	#featured .featured-block .featured-info {
 		margin-bottom: 30px;
 	}
 	/* Contact */
@@ -286,8 +286,8 @@
 		float: none;
 		margin: 20px;
 	}
-	/* journal */
-	#journal .journal-block .journal-info {
+	/* featured */
+	#featured .featured-block .featured-info {
 		margin-bottom: 30px;
 	}
 	/* Contact */
@@ -366,8 +366,8 @@
 		float: none;
 		margin: 20px;
 	}
-	/* journal */
-	#journal .journal-block .journal-info {
+	/* featured */
+	#featured .featured-block .featured-info {
 		margin-bottom: 30px;
 	}
 	/* Contact */
