--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,8 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-	background: url('../images/hero-bg.png') repeat scroll center center / cover;
+	background: url('../images/hero-bg-min.png') repeat scroll center center /
+		cover;
 	height: 100vh;
 	width: 100%;
 }
