--- a/css/style.css
+++ b/css/style.css
@@ -99,12 +99,18 @@ p {
 	background: #333;
 	border: medium none;
 	border-radius: 0;
-	color: #fff;
+	color: #fff !important;
 	font-size: 12px;
 	height: 50px;
 	line-height: 50px;
 	padding: 0 30px;
 	text-transform: uppercase;
+}
+
+.text {
+	margin-left: 15%;
+	margin-right: 15%;
+	font-weight: 600;
 }
 
 .btn:hover,
@@ -464,7 +470,7 @@ nav ul li a {
 	height: auto;
 	width: 100%;
 	background: #fff;
-	padding-bottom: 60px;
+	padding-bottom: 80px;
 	position: relative;
 }
 
@@ -519,6 +525,84 @@ nav ul li a {
 	margin: 0;
 	font-size: 14px;
 	line-height: 24px;
+}
+
+.hr {
+	border-top: 1px solid #929292 !important;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/*   Services
+/*-----------------------------------------------------------------------------------*/
+
+#services {
+	background: #ffff;
+	position: relative;
+	padding-bottom: 80px;
+	padding-top: 80px;
+}
+
+.owl-item {
+	float: left;
+}
+.services-block span {
+	margin: 10px 0;
+	position: relative;
+	font-size: 13px;
+	color: #292929;
+	letter-spacing: 0.1em;
+	font-weight: 500;
+	text-transform: uppercase;
+	display: block;
+}
+
+.services-block {
+	margin-top: 30px;
+}
+
+.services-block .separator {
+	margin: 0;
+	font-size: 13px;
+	line-height: 22px;
+}
+
+.services-block i {
+	font-size: 88px;
+	color: #292929;
+	line-height: 44px;
+}
+
+.services-carousel .owl-stage-outer {
+	overflow: hidden;
+}
+
+.services-carousel .owl-dots {
+	margin-top: 5px;
+	text-align: center;
+}
+
+.services-carousel .owl-dot {
+	display: inline-block;
+	margin: 0 5px;
+	width: 12px !important;
+	height: 12px !important;
+	border-radius: 50%;
+	border: 0;
+	padding: 0 !important;
+	background-color: #ddd;
+	cursor: pointer;
+}
+
+.services-carousel .owl-dot.active {
+	background-color: #b8a07e;
+}
+
+.owl-nav {
+	display: none;
+}
+
+.space {
+	margin-top: 80px;
 }
 
 /*-----------------------------------------------------------------------------------*/
