--- a/css/responsive.css
+++ b/css/responsive.css
@@ -222,8 +222,8 @@
 	}
 	/* Footer */
 	#footer .socials-media ul li {
-		margin-right: 0;
-		margin-left: 0;
+		margin-right: 10px;
+		margin-left: 10px;
 		float: none;
 		display: inline-block;
 	}
@@ -300,8 +300,8 @@
 	}
 	/* Footer */
 	#footer .socials-media ul li {
-		margin-right: 0;
-		margin-left: 0;
+		margin-right: 10px;
+		margin-left: 10px;
 		float: none;
 		display: inline-block;
 	}
@@ -380,8 +380,8 @@
 	}
 	/* Footer */
 	#footer .socials-media ul li {
-		margin-right: 0;
-		margin-left: 0;
+		margin-right: 10px;
+		margin-left: 10px;
 		float: none;
 		display: inline-block;
 	}
