--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ nav ul li a {
 }
 
 .hr {
-	border-top: 1px solid #afafaf !important;
+	border-top: 1px solid #ddd !important;
 }
 
 /*-----------------------------------------------------------------------------------*/
